k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: my-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-test
  template:
    metadata:
     labels:
       app: my-test
    spec:
      containers:
      - name: python-container
        image: python:bullseye
        command: ["python3", "-m", "http.server", "8080"]
