k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test
  labels:
    app: my-test
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: my-test
