k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: hi.my.test.ru
    http:
      paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: my-test
              port:
                number: 8080
